force-app/main/default/objects/OpportunityLineItem/fields/Applied_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Product_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Product Discount</label>
    <referenceTo>Product_Discount__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>