force-app/main/default/objects/OpportunityLineItem/fields/BypassValidationRule__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox informing if record can bypass validation rules or not.</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>