force-app/main/default/objects/OpportunityLineItem/fields/Current_Cost__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost__c</fullName>
    <description>Current Cost of Product</description>
    <formula>PricebookEntry.Product2.Current_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>