force-app/main/default/objects/OpportunityLineItem/fields/Item_SAP_Item_n__c.field-meta.xml
<CustomField>
    <fullName>Item_SAP_Item_n__c</fullName>
    <label>Item (SAP Item nº)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>