force-app/main/default/objects/OpportunityLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>(UnitPrice - (PricebookEntry.Product2.Standard_Cost__c * CURRENCYRATE(TEXT(CurrencyIsoCode)))) / UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>