force-app/main/default/objects/OpportunityLineItem/fields/Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy__c</fullName>
    <label>Product Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>