force-app/main/default/objects/OpportunityLineItem/fields/RCC__c.field-meta.xml
<CustomField>
    <fullName>RCC__c</fullName>
    <label>RCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>