force-app/main/default/objects/OpportunityLineItem/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <label>Sales Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>