force-app/main/default/objects/OpportunityLineItem/fields/Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost__c</fullName>
    <formula>PricebookEntry.Product2.Standard_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>