force-app/main/default/objects/OpportunityLineItem/fields/Stock_Keeping_Unit__c.field-meta.xml
<CustomField>
    <fullName>Stock_Keeping_Unit__c</fullName>
    <label>Stock Keeping Unit</label>
    <length>16</length>
    <type>Text</type>
</CustomField>