force-app/main/default/objects/OpportunityLineItem/fields/TECH_Opportunity_PricebookId_Formula__c.field-meta.xml
<CustomField>
    <fullName>TECH_Opportunity_PricebookId_Formula__c</fullName>
    <formula>Opportunity.Pricebook2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity PricebookId Formula</label>
    <type>Text</type>
</CustomField>