force-app/main/default/objects/OpportunityLineItem/fields/TECH_Total_Price_AMT__c.field-meta.xml
<CustomField>
    <fullName>TECH_Total_Price_AMT__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>