force-app/main/default/objects/OpportunityLineItem/fields/TECH_Total_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>TECH_Total_Price_Converted__c</fullName>
    <formula>TotalPrice/CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>