force-app/main/default/objects/OpportunityLineItem/fields/Weighted_Sales__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Sales__c</fullName>
    <formula>UnitPrice *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>