force-app/main/default/objects/OpportunityLineItem/fields/Weighted_Sales_With_Currency__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Sales_With_Currency__c</fullName>
    <formula>UnitPrice * Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>