force-app/main/default/objects/OpportunityLineItem/validationRules/PreventAddSAPProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventAddSAPProduct</fullName>
    <active>false</active>
    <description>This validation rule will prevent users to add SAP product in opportunities.</description>
    <errorConditionFormula>Product2.Name == $Label.SAPProduct</errorConditionFormula>
    <errorMessage>This product cannot be added in opportunities.</errorMessage>
</ValidationRule>