force-app/main/default/objects/OpportunityLineItem/validationRules/PreventChangesByNonAdmins.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangesByNonAdmins</fullName>
    <active>true</active>
    <description>Prevent any changes made by non admins</description>
    <errorConditionFormula>NOT($Setup.Bypass_Configuration__c.OpportunityLineItem_Validation_Rule__c)</errorConditionFormula>
    <errorMessage>You don&apos;t have the necessary permission to create or edit opportunity products.</errorMessage>
</ValidationRule>